--- a/styly.css
+++ b/styly.css
@@ -680,50 +680,8 @@ footer .footerlogo .text {
     position: relative;
     z-index: -1;
   }
-  footer {
-    bottom: 0;
-    left: 0;
-    height: 250px;
-    width: 100%;
-    background-color: #1E1E1E;
-    color: white;
-    padding-top: 5vh;
-  }
-  footer .nadpis h2 {
-    font-size: 35px;
-    opacity: 0.3;
-  }
-  footer .info p {
-    font-size: 20px;
-    opacity: 0.3;
-  }
-  footer .kontakt {
-    display: flex;
-    flex-direction: column;
-    gap: 1vh;
-    padding-left: 5em;
-  }
-  footer .footerlogo {
-    display: flex;
-    flex-direction: row;
-    justify-content: center;
-    gap: 1vw;
-    margin-top: -5vh;
-  }
-  footer .footerlogo .logonapis {
-    opacity: 0.3;
-    display: flex;
-    flex-direction: row;
-  }
-  footer .footerlogo .logonapis #l {
-    color: #0066FE;
-  }
-  footer .footerlogo .text {
-    opacity: 0.3;
-    padding-top: 15px;
-  }
   .main-onas {
-    margin-top: 0;
+    height: auto;
   }
   .main-onas .Onas {
     height: 450px;
@@ -761,9 +719,9 @@ footer .footerlogo .text {
   .kontaktdecor2 img {
     height: 450px;
     float: right;
-    margin-top: -45vh;
     position: relative;
     z-index: -1;
+    margin-top: -40vh;
   }
   .section3 {
     height: 500px;
@@ -1038,14 +996,8 @@ footer .footerlogo .text {
     float: right;
     margin-bottom: -25vh;
   }
-  footer {
-    bottom: 0;
-    left: 0;
-    height: 250px;
-    width: 100%;
-    background-color: #1E1E1E;
-    color: white;
-    padding-top: 5vh;
+  footer .nadpis {
+    margin-top: 5vh;
   }
   footer .nadpis h2 {
     font-size: 35px;
