--- a/styly.css
+++ b/styly.css
@@ -716,6 +716,12 @@ footer .footerlogo .text {
   .kontaktdecor img {
     height: 450px;
   }
+  .kontaktdecor2 {
+    height: 25vh;
+    z-index: -1;
+    position: relative;
+    float: right;
+  }
   .kontaktdecor2 img {
     height: 450px;
     float: right;
@@ -1019,6 +1025,7 @@ footer .footerlogo .text {
     justify-content: center;
     gap: 1vw;
     margin-top: -5vh;
+    margin-bottom: 5vh;
   }
   footer .footerlogo .logonapis {
     opacity: 0.3;
