--- a/styly.scss
+++ b/styly.scss
@@ -966,7 +966,6 @@ footer{
         }
     }
     .kontaktdecor2{
-        height: 25vh;
         z-index: -1;
         position: relative;
         float: right;
@@ -1295,6 +1294,7 @@ footer{
     }
 
     footer{
+        height: auto;
         .nadpis{
             margin-top: 5vh;
             h2
@@ -1326,7 +1326,6 @@ footer{
             justify-content: center;
             gap: 1vw;
             margin-top: -5vh;
-            margin-bottom: 5vh;
             .logonapis
             {
                 opacity: 0.3;
