--- a/styly.css
+++ b/styly.css
@@ -147,6 +147,8 @@ footer .footerlogo .text {
   .main {
     gap: 10vh;
     font-family: normal;
+    display: flex;
+    align-items: center;
   }
   .main-onas {
     display: flex;
