--- a/styly.scss
+++ b/styly.scss
@@ -198,6 +198,8 @@ footer{
     .main{
         gap: 10vh;
         font-family: normal;
+        display: flex;
+        align-items: center;
     }
 
     .main-onas{
