--- a/styly.css
+++ b/styly.css
@@ -315,17 +315,19 @@ footer .footerlogo .text {
     justify-content: center;
     align-items: center;
     gap: 3vh;
+    text-align: center;
   }
   .section2 .texty #char {
     display: none;
   }
   .section2 .texty #mobile-text {
     display: flex;
-    justify-content: space-around;
+    padding-top: 30px;
+    padding-bottom: 30px;
     flex-direction: column;
     align-items: center;
     width: 340px;
-    height: 30vh;
+    height: 28vh;
     background-color: #1E1E1E;
     border-radius: 20px;
   }
@@ -335,6 +337,7 @@ footer .footerlogo .text {
   .section2 .texty #mobile-text #mobile-nadpis {
     display: flex;
     flex-direction: row;
+    margin-bottom: 10px;
   }
   .section2 .texty #mobile-text #mobile-popis {
     max-width: 90%;
@@ -375,9 +378,38 @@ footer .footerlogo .text {
   .Sluzby-texty {
     display: flex;
     flex-direction: column;
-    margin-top: 5vh;
+    margin-top: 12vh;
     margin-bottom: 5vh;
     gap: 5vh;
+  }
+  .onas-item {
+    width: 340px;
+    height: -moz-fit-content;
+    height: fit-content;
+    background-color: #1E1E1E;
+    border-radius: 25px;
+    color: white;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    display: flex;
+    flex-direction: column;
+    margin-top: 12vh;
+    margin-bottom: 5vh;
+    padding: 30px;
+  }
+  .onas-item #char {
+    display: none;
+  }
+  .onas-item .text-onas {
+    text-align: center;
+  }
+  .onas-item .nadpis {
+    display: flex;
+    justify-content: center;
+  }
+  .onas-item .nadpis h1 {
+    font-size: 24px;
   }
   .item {
     width: 340px;
@@ -577,7 +609,12 @@ footer .footerlogo .text {
     flex-direction: column;
     margin-top: -55vh;
     margin-bottom: 150vh;
-    margin-left: 10vw;
+    margin-left: 7.5vw;
+    background-color: rgba(17, 17, 17, 0.9);
+    width: 550px;
+    height: 300px;
+    padding: 30px;
+    border-radius: 50px;
   }
   .section2 .text1 .nadpis1 {
     display: flex;
@@ -595,8 +632,13 @@ footer .footerlogo .text {
     flex-direction: column;
     margin-top: -165vh;
     margin-right: 10vw;
-    margin-left: 50vw;
+    margin-left: 55vw;
     margin-bottom: 60vh;
+    background-color: rgba(17, 17, 17, 0.9);
+    width: 550px;
+    height: 300px;
+    padding: 30px;
+    border-radius: 50px;
   }
   .section2 .text2 .nadpis2 {
     display: flex;
@@ -613,9 +655,14 @@ footer .footerlogo .text {
     color: white;
     display: flex;
     flex-direction: column;
-    margin-top: -55vh;
+    margin-top: -75vh;
     margin-bottom: 40vh;
-    margin-left: 10vw;
+    margin-left: 12.5vw;
+    background-color: rgba(17, 17, 17, 0.9);
+    width: 550px;
+    height: 300px;
+    padding: 30px;
+    border-radius: 50px;
   }
   .section2 .text3 .nadpis3 {
     display: flex;
@@ -687,6 +734,9 @@ footer .footerlogo .text {
   }
   .main-onas .Onas {
     height: 450px;
+    background-color: rgba(17, 17, 17, 0.9);
+    padding: 30px;
+    border-radius: 50px;
     display: flex;
     flex-direction: column;
     color: white;
@@ -761,6 +811,30 @@ footer .footerlogo .text {
     color: #0066FE;
   }
   .section3 h1 {
+    font-size: 30px;
+    color: white;
+  }
+  .onas-item {
+    background-color: rgba(17, 17, 17, 0.7);
+    height: auto;
+    width: 1100px;
+    margin-left: 50%;
+    margin-right: 50%;
+    transform: translateX(-50%);
+    padding: 50px;
+    border-radius: 50px;
+  }
+  .onas-item .nadpis {
+    margin-bottom: 50px;
+  }
+  .onas-item .nadpis h1 {
+    font-size: 70px;
+    color: white;
+  }
+  .onas-item .nadpis #char {
+    color: #0066FE;
+  }
+  .onas-item .text-onas {
     font-size: 30px;
     color: white;
   }
@@ -901,9 +975,12 @@ footer .footerlogo .text {
     font-size: 20px;
   }
   .kontakt1 {
-    height: 450px;
-    width: 690px;
+    height: 600px;
+    width: 850px;
+    padding: 50px;
     display: flex;
+    background-color: rgba(17, 17, 17, 0.9);
+    border-radius: 50px;
     flex-direction: column;
     margin-left: 50%;
     margin-right: 50%;
