--- a/styly.scss
+++ b/styly.scss
@@ -419,18 +419,19 @@ footer{
             justify-content: center;
             align-items: center;
             gap: 3vh;
-
+            text-align: center;
             #char{
                 display: none;
             }
 
             #mobile-text{
                 display: flex;
-                justify-content: space-around;
+                padding-top: 30px;
+                padding-bottom: 30px;
                 flex-direction: column;
                 align-items: center;
                 width: 340px;
-                height: 30vh;
+                height: 28vh;
                 background-color: #1E1E1E;
                 border-radius: 20px;
 
@@ -441,6 +442,7 @@ footer{
                 #mobile-nadpis{
                     display: flex;
                     flex-direction: row;
+                    margin-bottom: 10px;
                 }
 
                 #mobile-popis{
@@ -505,10 +507,46 @@ footer{
     .Sluzby-texty{
         display: flex;
         flex-direction: column;
-        margin-top: 5vh;
+        margin-top: 12vh;
         margin-bottom: 5vh;
         gap: 5vh;
     }
+
+
+
+
+    .onas-item{
+        width: 340px;
+        height: fit-content;
+        background-color: #1E1E1E;
+        border-radius: 25px;
+        color: white;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        display: flex;
+        flex-direction: column;
+        margin-top: 12vh;
+        margin-bottom: 5vh;
+        padding: 30px;
+        #char{
+            display: none;
+        }
+        .text-onas{
+            text-align: center;
+        }
+        .nadpis{
+            display: flex;
+            justify-content: center;
+            h1{
+                font-size: 24px;
+            }
+        }        
+    
+    }
+
+
+
 
 
 
@@ -777,7 +815,12 @@ footer{
             flex-direction: column;
             margin-top: -55vh;
             margin-bottom: 150vh;
-            margin-left: 10vw;
+            margin-left: 7.5vw;
+            background-color: rgb(17, 17, 17, 0.9);
+            width: 550px;
+            height: 300px;
+            padding: 30px;
+            border-radius: 50px;
             .nadpis1
             {
                 display: flex;
@@ -799,8 +842,13 @@ footer{
             flex-direction: column;
             margin-top: -165vh;
             margin-right: 10vw;
-            margin-left: 50vw;
+            margin-left: 55vw;
             margin-bottom: 60vh;
+            background-color: rgb(17, 17, 17, 0.9);
+            width: 550px;
+            height: 300px;
+            padding: 30px;
+            border-radius: 50px;
             .nadpis2
             {
                 display: flex;
@@ -821,9 +869,14 @@ footer{
             color: white;
             display: flex;
             flex-direction: column;
-            margin-top: -55vh;
+            margin-top: -75vh;
             margin-bottom: 40vh;
-            margin-left: 10vw;
+            margin-left: 12.5vw;
+            background-color: rgb(17, 17, 17, 0.9);
+            width: 550px;
+            height: 300px;
+            padding: 30px;
+            border-radius: 50px;
             .nadpis3
             {
                 display: flex;
@@ -925,6 +978,9 @@ footer{
     height: auto;
     .Onas{
         height: 450px;
+        background-color: rgb(17, 17, 17, 0.9);
+        padding: 30px;
+        border-radius: 50px;
         display: flex;
         flex-direction: column;
         color: white;
@@ -988,6 +1044,7 @@ footer{
             display: flex;
             flex-direction: column;
             margin-left: 5vw;
+            
             p{
                 font-size: 20px;
             }
@@ -1018,7 +1075,36 @@ footer{
         }
     }
 
-    
+    .onas-item
+    {
+        background-color: rgb(17, 17, 17, 0.7);
+        height: auto;
+        width: 1100px;
+        margin-left: 50%;
+        margin-right: 50%;
+        transform : translateX(-50%);
+        padding: 50px;
+        border-radius: 50px;
+        .nadpis
+        {
+            h1{
+                font-size: 70px;
+                color: white;
+            }
+            
+            #char
+            {
+                color: #0066FE;
+            }
+            margin-bottom: 50px;
+        }
+        .text-onas
+        {
+            font-size: 30px;
+            color: white;
+        }
+
+    }
     
     .Sluzby-texty
     {
@@ -1033,7 +1119,7 @@ footer{
 
         .item
         {
-            background-color: rgb(17, 17, 17, 0.7);;
+            background-color: rgb(17, 17, 17, 0.7);
             height: auto;
             width: 1100px;
             margin-left: 50%;
@@ -1181,9 +1267,12 @@ footer{
     }
     .kontakt1{
         
-        height: 450px;
-        width: 690px;
+        height: 600px;
+        width: 850px;
+        padding: 50px;
         display: flex;
+        background-color: rgb(17, 17, 17, 0.9);
+        border-radius: 50px;
         flex-direction: column;
         margin-left: 50%;
         margin-right: 50%;
