--- a/styly.scss
+++ b/styly.scss
@@ -788,9 +788,12 @@ footer{
         
         .textmain
         {
+            width: 500px;
+            height: 280px;
             h1
             {
                 font-size: 70px;
+                width: 800px;
             }
             margin-top: 50vh;
             margin-left: 10%;
