--- a/styly.scss
+++ b/styly.scss
@@ -19,6 +19,9 @@ header{
     z-index: 3;
 
     #first{
+        #nazev{
+            text-decoration: none;
+        }
         div{
             display: flex;
             flex-direction: row;
@@ -238,13 +241,16 @@ footer{
                 }
             }
 
-            div{
+            a{
                 grid-column: 2/3;
-                display: flex;
-                flex-direction: row;
                 align-self: center;
                 justify-self: center;
-                
+
+            }
+
+            div{  
+                display: flex;
+                flex-direction: row;
             }
             #l{
                 color: #0066FE;
@@ -749,6 +755,7 @@ footer{
             justify-content: space-between;
             align-items: center;
             margin-left: 50px;
+            
             div{
                 display: flex;
                 flex-direction: row;
