--- a/styly.css
+++ b/styly.css
@@ -35,6 +35,9 @@ header #first h1 {
 .section1 {
   color: white;
 }
+.section1 #demo {
+  text-shadow: 0 0 20px #0066FE;
+}
 .section1 .decor {
   float: right;
   margin-top: -30vh;
@@ -663,7 +666,7 @@ footer .footerlogo .text {
     color: white;
     display: flex;
     flex-direction: column;
-    margin-top: -75vh;
+    margin-top: -65vh;
     margin-bottom: 40vh;
     margin-left: 12.5vw;
     background-color: rgba(17, 17, 17, 0.9);
