--- a/styly.scss
+++ b/styly.scss
@@ -38,6 +38,10 @@ header{
 .section1{
     color: white;
 
+    #demo{
+        text-shadow: 0 0 20px #0066FE;
+    }
+
 
     .decor{
         float: right;
@@ -879,7 +883,7 @@ footer{
             color: white;
             display: flex;
             flex-direction: column;
-            margin-top: -75vh;
+            margin-top: -65vh;
             margin-bottom: 40vh;
             margin-left: 12.5vw;
             background-color: rgb(17, 17, 17, 0.9);
